# stock-research-desk

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml
.operator/: backlog.json  mission.md  seed-plan.md  state.json
.operator/checkpoints/: 20260410-011931-expand-the-bci-lexicon-with-clearer-public-vs-private-separation-and-adjacent-listed-names.md  20260410-012818-add-sector-specific-query-planning-for-sparse-themes-beyond-bci.md  20260410-013635-clean-title-style-company-names-into-legal-trading-entity-names-more-reliably.md
claude-skill/stock-research-desk/: SKILL.md
claude-skill/stock-research-desk/agents/: claude.yaml
claude-skill/stock-research-desk/references/: prompts.md  repo-map.md  watchlist-automation.md  workflow.md
codex-skill/stock-research-desk/: SKILL.md
codex-skill/stock-research-desk/agents/: openai.yaml
codex-skill/stock-research-desk/references/: repo-map.md  watchlist-automation.md
docs/: case-study-saiteng.md  cli-workflow.md  codex-skill.md  email-briefings.md  memo-schema.md  sample-memo.md  sample-screening.md  showcase.md  source-quality.md  submission-batch-1.md
src/stock_research_desk/: __init__.py  documents.py  persona_pack.py  runtime.py  stock_cli.py
src/stock_research_desk.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_stock_cli.py
